# LinkZap

./: .dockerignore  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  env.sh  main.py  pyproject.toml
app/: __init__.py  db.py
app/api/: urls.py
app/models/: mixins.py  urls.py
app/schemas/: urls.py
app/services/: db.py  redis.py
app/utils/: shortcode_generator.py
