[project]
name = "linkzap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]==0.128.0",
    "psycopg2==2.9.11",
    "redis>=7.1.0",
    "ruff>=0.14.10",
    "sqlalchemy==2.0.45",
]
